test/generics/errors/duplicate_parameter_error.hy
// Expect duplicate generic parameter diagnostic
class Bad<T, T>
{
    Bad()
    {
    }
}

void main()
{
}